[gd_scene load_steps=4 format=3 uid="uid://c8w7jq2wir2rg"]

[ext_resource type="PackedScene" uid="uid://bhfs8658gp2nr" path="res://scenes/ui/strength_ui/strength_item.tscn" id="1_3koku"]
[ext_resource type="Script" uid="uid://6smyleetq780" path="res://scenes/ui/strength_ui/strength_ui.gd" id="1_mudff"]
[ext_resource type="Texture2D" uid="uid://bax1xuer1jgpv" path="res://assets/textures/icons/mini/Heart_Outline.png" id="2_iw65k"]

[node name="StrengthUI" type="CanvasLayer"]
script = ExtResource("1_mudff")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 15

[node name="StrengthGrid" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 6

[node name="StrengthItem" parent="MarginContainer/StrengthGrid" instance=ExtResource("1_3koku")]
layout_mode = 2
texture = ExtResource("2_iw65k")

[node name="StrengthItem2" parent="MarginContainer/StrengthGrid" instance=ExtResource("1_3koku")]
layout_mode = 2
texture = ExtResource("2_iw65k")

[node name="StrengthItem3" parent="MarginContainer/StrengthGrid" instance=ExtResource("1_3koku")]
layout_mode = 2
texture = ExtResource("2_iw65k")
